--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=CHAR
 
+stripe.api-key=${STRIPE_API_KEY:}
+stripe.sandbox-id=${STRIPE_SANDBOX_ID:}
+
