--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.flyway.user=${SPRING_DATASOURCE_USERNAME}
 spring.flyway.password=${SPRING_DATASOURCE_PASSWORD}
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=7
+spring.flyway.out-of-order=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
