--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,6 +6,7 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
 REACT_APP_FIREBASE_APP_ID=
 REACT_APP_FIREBASE_MEASUREMENT_ID=
+REACT_APP_ANALYTICS_ALLOWED_HOSTS=mansa.web.app,mansa.firebaseapp.com
 
 # OpenAI configuration
 REACT_APP_OPENAI_API_KEY=
